--- a/data/pathfinder-bestiary/E4ctF7Fvi3cdkgQq.htm
+++ b/data/pathfinder-bestiary/E4ctF7Fvi3cdkgQq.htm
@@ -1,9 +1,8 @@
 Name: Hunting Spider
 Nom: Araignée chasseuse
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 Hunting spiders are the most common type of giant spider, though not the largest.<br /><br />
 ------ Description (fr) ------
-Les araignées chasseuses sont les plus courantes des araignées géantes mais pas les plus grosses.<br><br>
+Les Araignées chasseuses sont les plus courantes des araignées géantes mais pas les plus grosses.<br><br>
